# curso-ciencia-datos-e-ia

./: IntroduccionALaCienciaDeDatos.ipynb  README.md  pyproject.toml
Homework/Pandas/: tarea_01_pandas_ingestion.ipynb  tarea_02_pandas_ingestion.ipynb
Homework/Python/: tarea_01_python_numpy.ipynb  tarea_02_python.ipynb  tarea_03_python.ipynb
